<resources>
    <string name="app_name_full">1Basic Call Recorder</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_debug">Debug</string>
    <string name="pref_call_recording_name">Call recording</string>
    <string name="pref_call_recording_desc">Record incoming and outgoing phone calls. Microphone and notification permissions are required for recording in the background.</string>
    <string name="pref_record_rules_name">Auto-record rules</string>
    <string name="pref_record_rules_desc">Configure which calls should be automatically recorded.</string>
    <string name="pref_output_dir_name">Output directory</string>
    <string name="pref_output_dir_desc">Pick a directory to store recordings. Long press to open in file manager.</string>
    <string name="pref_output_format_name">Output format</string>
    <string name="pref_output_format_desc">Select an encoding format for the recordings.</string>
    <string name="pref_min_duration_name">Minimum recording duration</string>
    <plurals name="pref_min_duration_desc">
        <item quantity="one">Keep recordings at least %d second long.</item>
        <item quantity="other">Keep recordings at least %d seconds long.</item>
    </plurals>
    <string name="pref_min_duration_desc_zero">Keep recordings of any length.</string>
    <string name="pref_write_metadata_name">Write metadata file</string>
    <string name="pref_write_metadata_desc">Create a JSON file containing details about the call next to the audio file.</string>
    <string name="pref_record_telecom_apps_name">Record telecom-integrated apps</string>
    <string name="pref_record_telecom_apps_desc">Record calls from third-party apps that integrate with Android\'s telecom system. Recordings of these calls will likely contain only silence.</string>
    <string name="pref_record_dialing_state_name">Record calls before connection</string>
    <string name="pref_record_dialing_state_desc">For outgoing calls, start recording as soon as dialing begins instead of waiting until the call connects.</string>
    <string name="pref_notification_open_dir_name">Open directory from notification</string>
    <string name="pref_notification_open_dir_desc">Open the output directory instead of the recording file when tapping on the recording completed notification.</string>
    <string name="pref_show_launcher_icon_name">Show launcher icon</string>
    <string name="pref_show_launcher_icon_desc">When the launcher icon is hidden, dial <b>*#*#BCR#*#*</b> to open the app.</string>
    <string name="pref_version_name">Version</string>
    <string name="pref_force_direct_boot_name">Force direct boot mode</string>
    <string name="pref_force_direct_boot_desc">Pretend that the device is in the before first unlock state for testing.</string>
    <string name="pref_migrate_direct_boot_name">Migrate direct boot recordings</string>
    <string name="pref_migrate_direct_boot_desc">Migrate recordings made before the first unlock. This normally happens automatically after the first unlock.</string>
    <string name="pref_save_logs_name">Save logs</string>
    <string name="pref_save_logs_desc">Save logcat logs to a file.</string>
    <string name="pick_contact_group_title">Pick contact group</string>
    <string name="pick_contact_group_local_group">Local group</string>
    <string name="pref_header_rules">Rules</string>
    <string name="record_rules_info">Rules determine which action to take for a matching phone call. They are processed from top to bottom until a match is found. Tap and hold to reorder rules or swipe to delete them.</string>
    <string name="pref_add_new_rule_name">Add new rule</string>
    <string name="pref_add_new_rule_desc">Add a new rule to determine the action to take for a matching call.</string>
    <string name="record_rules_list_custom_name">Rule %d</string>
    <string name="record_rules_list_default_name">Default rule</string>
    <string name="record_rules_list_action_move_up">Move rule up</string>
    <string name="record_rules_list_action_move_down">Move rule down</string>
    <string name="record_rules_list_action_remove">Remove rule</string>
    <string name="record_rule_editor_change_contact">Change contact</string>
    <string name="record_rule_editor_change_contact_group">Change contact group</string>
    <string name="record_rule_number_title">Call number</string>
    <string name="record_rule_number_any_chip">Any</string>
    <string name="record_rule_number_unknown_chip">Unknown</string>
    <string name="record_rule_number_contact_chip">Contact</string>
    <string name="record_rule_number_contact_group_chip">Contact group</string>
    <string name="record_rule_number_unknown_summary">Match: Unknown numbers</string>
    <string name="record_rule_number_contact_summary">Contact: %s</string>
    <string name="record_rule_number_contact_group_unknown_summary">Contact group: %s</string>
    <string name="record_rule_number_contact_group_with_account_summary">Contact group: %1$s (%2$s)</string>
    <string name="record_rule_type_title">Call type</string>
    <string name="record_rule_type_any_chip">Any</string>
    <string name="record_rule_type_incoming_chip">Incoming</string>
    <string name="record_rule_type_outgoing_chip">Outgoing</string>
    <string name="record_rule_type_conference_chip">Conference</string>
    <string name="record_rule_type_incoming_summary">Type: Incoming call</string>
    <string name="record_rule_type_outgoing_summary">Type: Outgoing call</string>
    <string name="record_rule_type_conference_summary">Type: Conference call</string>
    <string name="record_rule_sim_title">SIM slot</string>
    <string name="record_rule_sim_any_chip">Any</string>
    <string name="record_rule_sim_specific_chip">SIM %d</string>
    <string name="record_rule_sim_specific_summary">SIM slot: %d</string>
    <string name="record_rule_action_title">Action</string>
    <string name="record_rule_action_save_chip">Save</string>
    <string name="record_rule_action_discard_chip">Discard</string>
    <string name="record_rule_action_ignore_chip">Ignore</string>
    <string name="record_rule_action_save_desc">Save the recording. The recording can be marked for deletion at the end of the call via the notification shown during a call.</string>
    <string name="record_rule_action_discard_desc">Discard the recording at the end of the call. The recording can be preserved via the notification shown during a call.</string>
    <string name="record_rule_action_ignore_desc">Completely ignore the call. The call will not be recorded and it is not possible to start the recording during the call.</string>
    <string name="record_rule_action_save_summary">Action: Save recording</string>
    <string name="record_rule_action_discard_summary">Action: Discard recording</string>
    <string name="record_rule_action_ignore_summary">Action: Ignore call</string>
    <string name="output_dir_bottom_sheet_change_dir">Change directory</string>
    <string name="output_dir_bottom_sheet_filename_template">Filename template</string>
    <string name="output_dir_bottom_sheet_edit_template">Edit template</string>
    <string name="output_dir_bottom_sheet_file_retention">File retention</string>
    <string name="output_dir_bottom_sheet_edit_retention">Edit retention</string>
    <string name="retention_keep_all">Keep all</string>
    <plurals name="retention_days">
        <item quantity="one">Keep %d day</item>
        <item quantity="other">Keep %d days</item>
    </plurals>
    <string name="retention_unusable">File retention is disabled because the current filename template is incompatible with the feature.</string>
    <string name="output_format_bottom_sheet_output_format">Output format</string>
    <string name="output_format_bottom_sheet_compression_level">Compression level</string>
    <string name="output_format_bottom_sheet_bitrate">Bitrate</string>
    <string name="output_format_bottom_sheet_sample_rate">Sample rate</string>
    <string name="output_format_bottom_sheet_custom_param">Custom</string>
    <string name="output_format_bottom_sheet_channels">Channels</string>
    <string name="bottom_sheet_reset">Reset to defaults</string>
    <string name="filename_template_dialog_title">Filename template</string>
    <string name="filename_template_dialog_message">Enter a custom template for the output filename. Variables are specified with curly braces (eg. <annotation type="template">{var}</annotation>). Fallbacks are specified with square brackets (eg. <annotation type="template">[{contact_name}|Unknown]</annotation>).\n\nSupported variables: <annotation type="supported_vars">PLACEHOLDER</annotation>. See <annotation type="template_docs">the documentation</annotation> for a complete description of the syntax.</string>
    <string name="filename_template_dialog_warning_subdirectories">Due to Android Storage Access Framework\'s poor performance, using subdirectories (<annotation type="template">/</annotation> character) may cause significant delays when saving the recording on some devices. The delay occurs at the end of the call and should not result in any loss of call audio.</string>
    <string name="filename_template_dialog_error_empty">Template cannot be empty</string>
    <string name="filename_template_dialog_error_unknown_variable">Unknown template variable: <annotation type="template">PLACEHOLDER</annotation></string>
    <string name="filename_template_dialog_error_has_argument">Variable cannot have an argument: <annotation type="template">PLACEHOLDER</annotation></string>
    <string name="filename_template_dialog_error_invalid_argument">Invalid variable argument: <annotation type="template">PLACEHOLDER</annotation></string>
    <string name="filename_template_dialog_error_invalid_syntax">Template syntax is invalid</string>
    <string name="filename_template_dialog_action_reset_to_default">Reset to default</string>
    <string name="file_retention_dialog_title">@string/output_dir_bottom_sheet_file_retention</string>
    <string name="file_retention_dialog_message">Enter the number of days to keep recordings.</string>
    <string name="file_retention_error_too_large">Number is too large</string>
    <string name="format_param_dialog_title">Custom parameter</string>
    <string name="format_param_dialog_message">Enter a value in the range [%1$s, %2$s].</string>
    <string name="format_sample_rate_dialog_title">Custom sample rate</string>
    <string name="format_sample_rate_dialog_message_desc">Enter a sample rate within one of these ranges:</string>
    <string name="format_sample_rate_dialog_message_range">[%1$s, %2$s]</string>
    <string name="format_param_bitrate_bps">%s bps</string>
    <string name="format_param_bitrate_kbps">%s kbps</string>
    <string name="format_param_compression_level">Level %s</string>
    <string name="format_sample_rate">%s Hz</string>
    <string name="channels_mono">Mono</string>
    <string name="channels_stereo">Stereo</string>
    <string name="channels_stereo_warning">Very few devices support stereo recording. If recording fails or is missing audio, switch to mono.</string>
    <string name="min_duration_dialog_title">@string/pref_min_duration_name</string>
    <string name="min_duration_dialog_message">Enter the minimum duration for a recording to be kept, excluding pauses and call holding. This can always be overridden during a call from the notification.</string>
    <plurals name="min_duration_dialog_seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="alert_logcat_success">Successfully saved logs to %1$s</string>
    <string name="alert_logcat_failure">Failed to save logs to %1$s: %2$s</string>
    <string name="alert_contact_group_query_failure">Failed to query contact groups: %1$s</string>
</resources>